--- a/turf-module.html
+++ b/turf-module.html
@@ -77,7 +77,7 @@
       defaults: defaults,
       inputs: 1,
       outputs: 1,
-      icon: "file.png",
+      icon: "turf_module.png",
       label: function () {
         return this.name || "turf-module";
       },
